# uno-ai

./: .gitignore  card.py  deck.py  game.py  load_game.py  main.py  play_game.py  player.py  pyproject.toml
AI/config/: config.yaml
AI/src/: agent.py  db_utils.py  input_encoding.py  main.py
enums/: card_type.py  color.py
saved_games/: session_20250801-193842.yaml
src/enums/: color.py
uno/: __init__.py  pyproject.toml
uno-pygame/: pyproject.toml
uno-pygame/assets/: README.txt
uno-pygame/src/: main.py
uno-pygame/src/pygame_things/: hand.py  pygame_ui.py
uno/config/: config.yaml
uno/src/: card.py  deck.py  game.py
uno/src/uno/: __init__.py  card.py  deck.py  game.py  game_saver.py  main.py  player.py
uno/src/uno/enums/: card_type.py  color.py
uno_pygame/: __init__.py
uno_pygame/assets/: KritaImage.kra
uno_pygame/src/: __init__.py  card.py  pygame_ui.py
